Fix Mitr font letter spacing on mobile

--- a/src/views/index.scss
+++ b/src/views/index.scss
@@ -8,6 +8,7 @@ html {
 
 * {
 	box-sizing: border-box;
+	font-weight: 300;
 }
 
 html, body {
